Fixed "User typing while checking causes misaligned markings" bug

--- a/client/styles/editor.less
+++ b/client/styles/editor.less
@@ -21,7 +21,7 @@
     //}
   }
 
-
+  .typographical,
   .grammar,
   .whitespace {
     .marking();
